Changes in <next release>:
 * Add new export dialog box which can export multiple pages and
   modify the export options
 * Add cubehelix() functional colormap

Minor changes
 * Fix incorrect use of None in (x,...) pattern
 * Catch crash if plotting nan/inf value in log space

Changes in 1.22:
 * Add option to ignore white space following delimiters when importing CSVs
 * Allow x/yedge and x/ycent to be inverted to change data order
   when import 2D data
 * Rewrite of widget tree internals to fix miscellaneous bugs
 * Optionally use astropy for SAMP
 * Add setting to extend the python import path
 * Add option to select widgets with same name on page
 * Resize rectangular shapes keeping other corners fixed. Old symmetric
   resize behaviour is retained if shift is pressed.

Bug fixes
 * Fix faulty caching of datasets expressions
 * Do not auto mirror axes if shared axis placed in grid and ignore
   other hidden axes for mirroring purposes
 * gridatedge 2D import option inverts values in rows
 * y values for 2D datasets in data edit dialog are inverted
 * Fix crash when constructing 2D dataset with constants
 * Fix crash when interpreting date values with unicode
 * Fix for crash when moving ellipses on broken axes
 * Fix crash when editing datetime data
 * Fix crash when renaming 2D datasets in dataset editor
 * If 2d dataset does not exist, don't crash when using colorbar
 * Ignore HDF5 data types which are not supported by h5py
 * Catch recursion limit errors properly
 * In sort and text sort plugins, clip length to minimum
 * Do not plot functions with more than 1D in function plotter
 * Catch error for shapes widgets with no coordinates
 * Handle zero length datasets in subtract minimum or mean
 * Clip range of zoom between 0.05 and 20x
 * Catch errors in CSV date format
 * Do not allow 2D datasets to be used for labels in label widget
 * Handle unicode data correctly in clipboard data
 * Fix data import dialog for fits files in unicode paths
